fix typo on scala jupyter notebook example (spark vagrant recipe)

--- a/vagrant/spark/files/jupyter/example-scala.ipynb
+++ b/vagrant/spark/files/jupyter/example-scala.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "// If the spark jars where not on the Worker classpath they could be added,\n",
+    "// If the spark jars were not on the Worker classpath they could be added,\n",
     "// directly from the maven repository, using the following code:\n",
     "\n",
     "//classpath.add(\"org.apache.spark\" % \"spark-core_2.11\" % \"2.0.1\")"
