--- a/vagrant/spark/files/jupyter/example-scala.ipynb
+++ b/vagrant/spark/files/jupyter/example-scala.ipynb
@@ -123,14 +123,14 @@
  "metadata": {
   "kernelspec": {
    "display_name": "Scala 2.11",
-   "language": "scala211",
-   "name": "scala211"
+   "language": "scala",
+   "name": "scala"
   },
   "language_info": {
    "codemirror_mode": "text/x-scala",
    "file_extension": ".scala",
    "mimetype": "text/x-scala",
-   "name": "scala211",
+   "name": "scala",
    "pygments_lexer": "scala",
    "version": "2.11.8"
   }
